@@ -1,3 +1,7 @@
+2015-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* ac/xindy.ac: Drop the obsolete '--with-xindy-recode'.
+
 2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Use the fragment ../../am/dist_hook.am.
